[workspace]
members = [
	"editor",
	"proc-macros",
	"frontend/wasm",
	"frontend/src-tauri",
	"node-graph/gcore",
	"node-graph/gstd",
	"node-graph/graph-craft",
	"node-graph/graphene-cli",
	"node-graph/interpreted-executor",
	"node-graph/node-macro",
	"node-graph/compilation-server",
	"node-graph/compilation-client",
	"node-graph/wgpu-executor",
	"node-graph/gpu-executor",
	"node-graph/gpu-compiler/gpu-compiler-bin-wrapper",
	"libraries/dyn-any",
	"libraries/path-bool",
	"libraries/bezier-rs",
	"libraries/math-parser",
	"website/other/bezier-rs-demos/wasm",
]
exclude = ["node-graph/gpu-compiler"]
resolver = "2"

[workspace.dependencies]
# Local dependencies
dyn-any = { path = "libraries/dyn-any", features = ["derive", "glam", "reqwest"] }
graphene-core = { path = "node-graph/gcore" }
graph-craft = { path = "node-graph/graph-craft", features = ["serde"] }
wgpu-executor = { path = "node-graph/wgpu-executor" }
bezier-rs = { path = "libraries/bezier-rs", features = ["dyn-any"] }
path-bool = { path = "libraries/path-bool", default-features = false }
math-parser = { path = "libraries/math-parser" }
node-macro = { path = "node-graph/node-macro" }

# Workspace dependencies
rustc-hash = "2.0"
bytemuck = { version = "1.13", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
futures = "0.3"
env_logger = "0.11"
log = "0.4"
bitflags = { version = "2.4", features = ["serde"] }
ctor = "0.2"
convert_case = "0.6"
derivative = "2.2"
tempfile = "3.6"
thiserror = "2"
anyhow = "1.0"
proc-macro2 = "1"
quote = "1.0"
axum = "0.7"
chrono = "0.4"
ron = "0.8"
fastnoise-lite = "1.1"
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git" }
wgpu-types = "23"
wgpu = "23"
once_cell = "1.13" # Remove when `core::cell::LazyCell` (<https://doc.rust-lang.org/core/cell/struct.LazyCell.html>) is stabilized in Rust 1.80 and we bump our MSRV
wasm-bindgen = "=0.2.99" # NOTICE: ensure this stays in sync with the `wasm-bindgen-cli` version in `website/content/volunteer/guide/project-setup/_index.md`. We pin this version because wasm-bindgen upgrades may break various things.
wasm-bindgen-futures = "0.4"
js-sys = "=0.3.76"
web-sys = "=0.3.76"
winit = "0.29"
url = "2.5"
tokio = { version = "1.29", features = ["fs", "io-std"] }
vello = { git = "https://github.com/linebender/vello.git", rev = "3275ec8" } # TODO switch back to stable when a release is made
resvg = "0.44"
usvg = "0.44"
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3"
glam = { version = "0.29", default-features = false, features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rustybuzz = "0.20"
spirv = "0.3"
fern = { version = "0.6", features = ["colored"] }
num_enum = "0.7"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
specta = { git = "https://github.com/0hypercube/specta.git", features = [
	"glam",
	"derive",
	# "typescript",
] }
syn = { version = "2.0", default-features = false, features = [
	"full",
	"derive",
] }
kurbo = { version = "0.11.0", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package]
graphite-editor = { opt-level = 1 }
graphene-core = { opt-level = 1 }
graphene-std = { opt-level = 1 }
interpreted-executor = { opt-level = 1 } # This is a mitigation for https://github.com/rustwasm/wasm-pack/issues/981 which is needed because the node_registry function is too large
graphite-proc-macros = { opt-level = 1 }
image = { opt-level = 2 }
rustc-hash = { opt-level = 3 }
serde_derive = { opt-level = 1 }
specta-macros = { opt-level = 1 }
syn = { opt-level = 1 }

[profile.release]
lto = "thin"
debug = true

[profile.profiling]
inherits = "release"
debug = true
