[package]
name = "graphite-charcoal"
publish = false
version = "0.0.0"
rust-version = "1.56.0"
authors = ["Graphite Authors <contact@graphite.design>"]
edition = "2021"
readme = "../README.md"
homepage = "https://www.graphite.design"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
