[package]
name = "graphite-document-legacy"
publish = false
version = "0.0.0"
rust-version = "1.66.0"
authors = ["Graphite Authors <contact@graphite.rs>"]
edition = "2021"
readme = "../README.md"
homepage = "https://graphite.rs"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
graph-craft = { path = "../node-graph/graph-craft", features = [
	"serde",
	"specta",
] }
graphene-std = { path = "../node-graph/gstd", features = ["serde"] }
graphene-core = { path = "../node-graph/gcore", features = ["serde"] }
image = { version = "0.24", default-features = false }

log = "0.4"

bezier-rs = { path = "../libraries/bezier-rs" }
kurbo = { git = "https://github.com/linebender/kurbo.git", features = [
	"serde",
] }
specta.workspace = true
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
glam = { version = "0.22", features = ["serde"] }
rustybuzz = "0.6.0"
