[package]
name = "graphite-document-legacy"
publish = false
version = "0.0.0"
rust-version = "1.66.0"
authors = ["Graphite Authors <contact@graphite.rs>"]
edition = "2021"
readme = "../README.md"
homepage = "https://graphite.rs"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
graph-craft = { path = "../node-graph/graph-craft", features = ["serde"] }
graphene-std = { path = "../node-graph/gstd", features = ["serde"] }
graphene-core = { workspace = true, features = ["serde"] }
image = { workspace = true, default-features = false }

log = { workspace = true }

bezier-rs = { workspace = true }
kurbo = { workspace = true }
specta = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
glam = { workspace = true }
rustybuzz = { workspace = true }
