[package]
name = "graph-storage"
description = "Provides a delta based graph representation used in the Graphite file format"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
graph-craft = { workspace = true }
core-types = { workspace = true }
postcard = { version = "1.0", features = ["use-std"] }
rustc-hash = "2.0"
thiserror = "2.0"

[dev-dependencies]
graph-craft = { workspace = true, features = ["loading"] }
