[package]
name = "graphite-graphene"
publish = false
version = "0.0.0"
rust-version = "1.56.0"
authors = ["Graphite Authors <contact@graphite.design>"]
edition = "2021"
readme = "../README.md"
homepage = "https://www.graphite.design"
repository = "https://github.com/GraphiteEditor/Graphite"
license = "Apache-2.0"

[dependencies]
log = "0.4"

kurbo = { git = "https://github.com/linebender/kurbo.git", features = [
    "serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
glam = { version = "0.17", features = ["serde"] }
