[package]
name = "graphite-proc-macros"
# Inherited from workspace - start
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
# Inherited from workspace - end

[lib]
path = "src/lib.rs"
proc-macro = true

[features]
default = ["serde-discriminant"]
serde-discriminant = []

[dependencies]
# Workspace dependencies
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
# Local dependencies
editor = { path = "../editor", package = "graphite-editor" }

# Workspace dependencies
serde = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["graphite-editor"]
